@@ -1,9 +1,9 @@
 
 # Plugin messages
 timedmessages.description: Broadcast messages at specific times.
+timedmessages.worldguard-hooked: Using {0}.
 
-messageconfiguration.world-needs-to-be-configured: You have specified regions for message '{0}' but no worlds. 
-messageconfiguration.message-ignored: {0} has can not be used until the above error is fixed.
+messagesconfiguration.world-must-be-configured: You have specified regions for message {0} but no worlds. Ignoring message.
 
 # ReloadCommand
 reloadcommand.name: reload
